<resources>
    <string name="app_name">NotesMiner</string>
    <string name="btech">B.tech</string>
    <string name="mtech">M.tech</string>
    <string name="diploma">Diploma</string>
    <string name="msc">M.Sc</string>
    <string name="mba">MBA</string>
    <string name="coming_soon">Coming soon ...</string>
    <string name="c_v_raman_global_university">C. V. RAMAN GLOBAL UNIVERSITY</string>
    <string name="notice_board_cgu">Notice Board @CGU</string>
    <string name="logo">logo</string>
    <string name="marine_engg">Marine Engg</string>
    <string name="computer_science_engg">Computer Science Engg</string>
    <string name="electronice_communication_engg"><![CDATA[Electronics & Communication Engg]]></string>
    <string name="electrical_engg">Electrical Engg</string>
    <string name="mechanical_engg">Mechanical Engg</string>
    <string name="chemical_engg">Chemical Engg</string>
    <string name="civil_engg">Civil Engg</string>
    <string name="hello_user">Hello User!</string>
    <string name="year_in_digits">Year (In digits)</string>
    <string name="go">Go!</string>
    <string name="mechatronics">Mechatronics</string>
    <string name="phd">PHD</string>
    <string name="m_sc_in_chemistry">M.Sc in Chemistry</string>
    <string name="m_sc_in_applied_mathematics_computing"><![CDATA[M.Sc in Applied Mathematics & Computing]]></string>
    <string name="m_sc_in_physics">M.Sc in Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="mathematics">Mathematics</string>
    <string name="english">English</string>
    <string name="business_management">Business Management</string>
    <string name="marketing_management">Marketing Management</string>
    <string name="industrial_relations">Industrial Relations</string>
    <string name="security_analysis_portfolio_management"><![CDATA[Security Analysis & Portfolio Management]]></string>
    <string name="direct_taxation">Direct Taxation</string>
    <string name="performance_management">Performance Management</string>
    <string name="entrepreneurship_small_business_management"><![CDATA[Entrepreneurship & Small Business Management]]></string>
    <string name="business_corporate_law"><![CDATA[Business & Corporate Law]]></string>
    <string name="sales_distribution_management"><![CDATA[Sales & Distribution Management]]></string>
    <string name="economics_for_management">Economics for Management</string>
    <string name="financial_accounting_analysis"><![CDATA[Financial Accounting & Analysis]]></string>
    <string name="stay_tuned">Stay Tuned</string>
    <string name="b_tech_1st_year">B.Tech (1st Year)</string>
    <string name="sub1">IEE- INTRODUCTION TO ELECTRICAL ENGG</string>
    <string name="sub2">EP- ENGG PHYSICS</string>
    <string name="sub3">EC- ENGG CHEMISTRY</string>
    <string name="sub4">EG - ENGG GRAPHICS</string>
    <string name="sub5">BEE- BASIC ELECTRICAL ENGG</string>
    <string name="sub6">IME- INTRODUCTION TO MECHANICAL ENGG</string>
    <string name="sub7">PCE- PROFESSIONAL COMMUNICATION IN ENGLISH</string>
    <string name="sub8">ESE - ENVIRONMENTAL SCI. ENGG</string>
    <string name="sub9">TW - Technical Writing</string>
    <string name="sub10">DMGT - Discrete mathematics and Graph Theory</string>
    <string name="sub11">AEC - Analog Electronic Circuits</string>
    <string name="sub12">OOP - Object Oriented Programming</string>
    <string name="sub13">DCCN - Data Communication and Computer Networks</string>
    <string name="sub14">DS - Data Structures</string>
    <string name="sub15">CO - COMPUTER ORGANIZATION</string>
    <string name="sub16">OS - OPERATING SYSTEM</string>
    <string name="sub17">TC - THEORY OF COMPUTATION</string>
    <string name="sub18"><![CDATA[DMDW - DATA MINING & DATA WAREHOUSE]]></string>
    <string name="sub19">J2EE - JAVA 2 ENTERPRISE EDITION</string>
    <string name="b_tech_2nd_year">B.Tech (2nd Year)</string>
    <string name="b_tech_3rd_year">B.Tech (3rd Year)</string>
    <string name="sub20">DL - DEEP LEARNING</string>
    <string name="sub21">CI - COMPUTATIONAL INTELLIGENCE</string>
    <string name="sub22">IOT - INTERNET OF THINGS</string>
    <string name="sub23">ES - EMBEDDED SYSTEM</string>
    <string name="sub24">SE - SOFTWARE ENGINEERING</string>
</resources>