<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PHDBranch">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/c__v__raman_global_university_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phd"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TableLayout
        android:layout_width="428dp"
        android:layout_height="750dp"
        android:layout_marginHorizontal="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button6"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26E91E63"
                android:text="@string/computer_science_engg" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#2600BCD4"
                android:text="@string/electronice_communication_engg"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#266C1A7A"
                android:text="@string/electrical_engg" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26FFEB3B"
                android:text="@string/mechanical_engg" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#264CAF50"
                android:text="@string/chemical_engg" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26FF9800"
                android:text="@string/civil_engg" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button10"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26009688"
                android:text="@string/marine_engg" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26F44336"
                android:text="@string/chemistry" />

            <Button
                android:id="@+id/button12"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#263F51B5"
                android:text="@string/physics" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button13"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26422905"
                android:text="@string/mathematics" />

            <Button
                android:id="@+id/button14"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#26CDDC39"
                android:text="@string/english" />

            <Button
                android:id="@+id/button15"
                style="@style/Widget.App.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="#2600BCD4"
                android:text="@string/business_management" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>